# Minutes-of-Meeting

./: README.md  app.py  main.py  pyproject.toml  state.py
logic/api/: ask.py  gen_ppt.py  minutes_gen.py  upload_audio.py
logic/create_ppt/: ppt_gen.py
logic/mom/: generate_mom.py
logic/rag/: chunk_embed.py  query.py  tts_query.py
logic/transcription/: clean_transcript.py  transcribe_audio.py
